Changed service type

--- a/api.yaml
+++ b/api.yaml
@@ -81,4 +81,4 @@ items:
         app: currency-exchange
         deploymentconfig: apidc1
       sessionAffinity: None
-      type: LoadBalancer
+      type: ClusterIP
